  primaryjoin/secondaryjoin arguments to specify/override foreign keys defined on the
  Table instance.
  - extension() query option propigates to Mapper._instance() method so that 
  all loading-related methods get called [ticket:454]
  - eager relation to an inheriting mapper wont fail if no rows returned for
  the relationship.
  - fix for very large topological sorts, courtesy ants.aasma at gmail [ticket:423]
  - eager loading is slightly more strict about detecting "self-referential"
  relationships, specifically between polymorphic mappers.
  - improved support for complex queries embedded into "where" criterion
  for query.select() [ticket:449]
  - contains_eager('foo') automatically implies eagerload('foo')
  - added "alias" argument to contains_eager().  use it to specify the string name
    or Alias instance of an alias used in the query for the eagerly loaded child items.
    easier to use than "decorator"
  - added "contains_alias()" option for result set mapping to an alias of the mapped table
  - mapper options like eagerload(), lazyload(), deferred(), will work for "synonym()"
  relationships [ticket:485]
  - fixed bug where cascade operations incorrectly included deleted collection
  items in the cascade [ticket:445]
  - fixed relationship deletion error when one-to-many child item is moved to a new 
  parent in a single unit of work [ticket:478]
  - fixed relationship deletion error where parent/child with a single column as PK/FK 
  on the child would raise a "blank out the primary key" error, if manually deleted
  or "delete" cascade without "delete-orphan" was used
  - fix to deferred so that load operation doesnt mistakenly occur when only
  PK col attributes are set
  - added support for py2.5 "with" statement with SessionTransaction [ticket:468]
- oracle:
  - when returning "rowid" as the ORDER BY column or in use with ROW_NUMBER OVER,
  oracle dialect checks the selectable its being applied to and will switch to 