@@ -27,6 +27,8 @@
   all loading-related methods get called [ticket:454]
   - eager relation to an inheriting mapper wont fail if no rows returned for
   the relationship.
+  - eager relation loading bug fixed for eager relation on multiple
+  descendant classes [ticket:486]
   - fix for very large topological sorts, courtesy ants.aasma at gmail [ticket:423]
   - eager loading is slightly more strict about detecting "self-referential"
   relationships, specifically between polymorphic mappers.
